--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Pokédex</string>
     <string name="image_of_pokemon">Image of pokemon</string>
+    <string name="pokemon_image_string">Pokemon Image</string>
+    <string name="title">Title</string>
 </resources>
